# CourseWorkRest

./: .env  .env.sample  README.md  docker-compose.yaml  pyproject.toml
config/: docs.py  settings.py  urls.py
habits/: models.py  pagination.py  permissions.py  serializers.py  tasks.py  telegram_bot.py  tests.py  urls.py  validators.py  views.py
habits/management/commands/: fill.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habits_owner.py  0004_alter_habits_reward.py  0005_habits_limit.py  0006_logs.py  0007_alter_logs_last_attempt.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
