[tool.poetry]
name = "courseworkrest"
version = "0.1.0"
description = ""
authors = ["hoolywant <sir.saltickow@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
pillow = "^10.1.0"
env = "^0.1.0"
python-dotenv = "^1.0.0"
celery = "^5.3.4"
generics = "^6.0.0"
psycopg2-binary = "^2.9.9"
drf-yasg = "^1.21.7"
coreapi = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
